# penny_rtc

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  install.sh
src/: main.cpp  tcp_server.cpp  tcp_server.h
src/server/: handle.cpp  handle.h  protocol.h  server.cpp  server.h  tcp_connection.cpp  tcp_connection.h  worker.cpp  worker.h  xhead.h
